
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 void* malloc (size_t) ;
 int printf (char*) ;

void *M_malloc(size_t size){

register void *value;

value = malloc(size);

if(value == ((void*)0)){

printf("ERROR:virtual memory exhausted...n");

exit(-1);

}

return value;

}
